# bombadil

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs  flake.nix
.github/workflows/: ci.yml  release.yml
docs/: contributing.md
docs/development/: launch.json
docs/manual/src/: 02-getting-started.md
experiments/trace-graph/: d3.py  d3_dag.py  dot.py  flake.nix
nix/: Cargo.nix  default.nix  executable.nix
src/: browser.rs  build.rs  instrumentation.rs  lib.rs  main.rs  proxy.rs  runner.rs  tree.rs
src/browser/: actions.rs  actions.ts  evaluation.rs  instrumentation.rs  keys.rs  random.rs  script.d.ts  state.rs  tsconfig.json
src/browser/actions/: clicks.ts  hegel.rs  inputs.ts  scrolls.ts  tree.rs
src/experiments/typescript-ltl/: README.md  bombadil.ts  eval.test.ts  eval.ts  example.test.ts  example.ts  render.ts  runtime.ts  test.ts  time.ts  tsconfig.json
src/instrumentation/: html.rs  js.rs  mod.rs  source_id.rs
src/instrumentation/snapshots/: antithesis_browser__instrumentation__html__tests__instrument_html_inline_script.snap  antithesis_browser__instrumentation__html__tests__instrument_html_inline_script_javascript_type.snap  antithesis_browser__instrumentation__html__tests__instrument_html_inline_script_other_type.snap  antithesis_browser__instrumentation__js__tests__instrument_source_code_if.snap  antithesis_browser__instrumentation__js__tests__instrument_source_code_if_else.snap  antithesis_browser__instrumentation__js__tests__instrument_source_code_ternary.snap  antithesis_browser__instrumentation__js__tests__instrument_source_code_ternary_assignment.snap  bombadil__instrumentation__html__tests__instrument_html_inline_script_no_type.snap  bombadil__instrumentation__js__tests__instrument_source_code_switch.snap  (+1 more)
src/snapshots/: antithesis_browser__instrumentation__tests__instrument_source_code_if.snap  antithesis_browser__instrumentation__tests__instrument_source_code_if.snap.new  antithesis_browser__instrumentation__tests__instrument_source_code_if_else.snap  antithesis_browser__instrumentation__tests__instrument_source_code_if_else.snap.new  antithesis_browser__instrumentation__tests__instrument_source_code_switch.snap  antithesis_browser__instrumentation__tests__instrument_source_code_ternary.snap  antithesis_browser__instrumentation__tests__instrument_source_code_ternary.snap.new  antithesis_browser__instrumentation__tests__instrument_source_code_ternary_assignment.snap  antithesis_browser__instrumentation__tests__instrument_source_code_ternary_assignment.snap.new  antithesis_browser__instrumentation__tests__instrument_source_code_ternary_comma_operator.snap  antithesis_browser__instrumentation__tests__instrument_source_code_ternary_comma_operator.snap.new
src/specification/: bombadil_exports.rs  defaults.ts  extractors.rs  index.ts  internal.ts  js.rs  ltl.rs  ltl_equivalences.rs  mod.rs  module_loader.rs  render.rs  result.rs  stop.rs  syntax.rs  tsconfig.json  verifier.rs  worker.rs
src/trace/: mod.rs  writer.rs
tests/: integration_tests.rs
tests/back-from-non-html/: feed.xml  index.html
tests/console-error/: index.html
tests/links/: a.html  b.html  c.html
tests/mutation/: index.html
tests/no-action-available/: index.html
tests/uncaught-exception/: index.html
tests/unhandled-promise-rejection/: index.html
(+2 files in other folders)
