[package]
name = "antithesis_browser"
version = "0.1.0"
edition = "2024"
exclude = []

[[bin]]
name = "antithesis_browser"
path = "src/main.rs"

[lib]
name = "antithesis_browser"
path = "src/lib.rs"

[dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
axum = "0.8.8"
chromiumoxide = "0.8.0"
clap = { version = "4.5.46", features = ["derive"] }
env_logger = "0.11.8"
futures = "0.3.31"
http = "1.4.0"
hyper = "1.8.1"
hyper-util = "0.1.19"
include_dir = "0.7.4"
log = "0.4.29"
oxc = "0.82.3"
oxc_codegen = "0.82.3"
oxc_semantic = "0.82.3"
oxc_sourcemap = "4.1.0"
oxc_traverse = "0.82.3"
rand = "0.9.2"
rand_chacha = "0.9.0"
serde_json = "1.0.145"
serde = { version =  "1.0.228", features = ["derive"] }
tempfile = "3.22.0"
tokio = "1.48.0"
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["fs"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.7"
http-body-util = "0.1.3"
const_format = "0.2.35"

[build-dependencies]
glob = "0.3.3"

[dev-dependencies]
insta = "1.43.1"
