[package]
name = "bombadil"
version = "0.1.0"
edition = "2024"
exclude = []
build = "src/build.rs"

[[bin]]
name = "bombadil"
path = "src/main.rs"

[lib]
name = "bombadil"
path = "src/lib.rs"

[dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
chromiumoxide = "0.8.0"
clap = { version = "4.5.46", features = ["derive"] }
env_logger = "0.11.8"
futures = "0.3.31"
http = "1.4.0"
include_dir = "0.7.4"
log = "0.4.29"
oxc = { version = "0.112.0", features = ["codegen", "semantic", "transformer"] }
oxc_traverse = "0.112.0"
rand = "0.9.2"
rand_chacha = "0.9.0"
serde_json = "1.0.145"
serde = { version =  "1.0.228", features = ["derive"] }
tempfile = "3.22.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.7"
http-body-util = "0.1.3"
const_format = "0.2.35"
html5ever = "0.36.1"
bytes = "1.11.0"
base64 = "0.22.1"
markup5ever_rcdom = "0.36.0"
boa_engine = "0.21.0"

[build-dependencies]
glob = "0.3.3"

[dev-dependencies]
axum = "0.8.8"
indoc = "2.0.7"
insta = "1.43.1"
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["fs"] }
